RESOLVED FIXED127774
[ATK] accessibility/range-alter-by-percent.html is failing after r162587.
https://bugs.webkit.org/show_bug.cgi?id=127774
Summary [ATK] accessibility/range-alter-by-percent.html is failing after r162587.
Krzysztof Czech
Reported 2014-01-28 06:31:22 PST
Output: --- /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/layout-test-results/accessibility/range-alter-by-percent-expected.txt +++ /mnt/buildbot/efl-linux-slave-2/efl-linux-64-release-wk2/build/layout-test-results/accessibility/range-alter-by-percent-actual.txt @@ -12,8 +12,8 @@ PASS smallRange.intValue is 5 PASS smallRange.intValue is 6 PASS smallRange.intValue is 7 -PASS smallRange.intValue is 6 -PASS smallRange.intValue is 5 +FAIL smallRange.intValue should be 6. Was 7. +FAIL smallRange.intValue should be 5. Was 7. PASS successfullyParsed is true TEST COMPLETE
Attachments
patch (1.73 KB, patch)
2014-01-28 06:49 PST, Krzysztof Czech
no flags
patch (1.74 KB, patch)
2014-01-28 06:53 PST, Krzysztof Czech
no flags
Radar WebKit Bug Importer
Comment 1 2014-01-28 06:31:32 PST
Krzysztof Czech
Comment 2 2014-01-28 06:39:01 PST
This test had been added by the r162587 and it's failing. When step is not specified, range type elements are altered by 5 percent between minimum and maximum values. In some circumstances this value is less than 1 which is wrong. Implicit value of step should be 1 or larger.
Krzysztof Czech
Comment 3 2014-01-28 06:49:48 PST
Krzysztof Czech
Comment 4 2014-01-28 06:53:52 PST
WebKit Commit Bot
Comment 5 2014-01-28 08:24:51 PST
Comment on attachment 222442 [details] patch Clearing flags on attachment: 222442 Committed r162932: <http://trac.webkit.org/changeset/162932>
WebKit Commit Bot
Comment 6 2014-01-28 08:24:54 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.