[ATK] accessibility/range-alter-by-percent.html is failing after r162587. https://bugs.webkit.org/show_bug.cgi?id=127774

Reviewed by Mario Sanchez Prada.

Implicit value of step in range type elements should be one or larger.

No new tests. Covered by exiting one.

* accessibility/atk/WebKitAccessibleInterfaceValue.cpp:
(webkitAccessibleValueGetMinimumIncrement):


Canonical link: https://commits.webkit.org/145772@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162932 268f45cc-cd09-0410-ab3c-d52691b4dbfc